--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gridzero-app",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
@@ -8,13 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@privy-io/react-auth": "^3.14.1",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "viem": "^2.21.0",
-    "snarkjs": "^0.7.4",
-    "zkverifyjs": "^2.1.0",
-    "ethers": "^6.13.0",
-    "dotenv": "^16.4.0"
+    "viem": "^2.21.0"
   }
 }
